--- a/consult/less/global.less
+++ b/consult/less/global.less
@@ -1,3 +1,15 @@
+body.page-text{
+    h1:first-child{
+        margin:30px 0;
+        text-align: center;
+
+    }
+    & > .wrapper > .content-block{
+        p{
+            line-height:160%;
+        }
+    }
+}
 .no-script-layout{
     position: fixed;
     width: 100%;
